# tictaque-gameserver

./: AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile
examples/: smoke_test.rs
src/: config.rs  main.rs
src/codec/: mod.rs  msgp.rs
src/game/: actor.rs  mod.rs  registry.rs  store.rs
src/game/domain/: commands.rs  events.rs  game.rs  mod.rs  player.rs  question.rs
src/session/: mod.rs
src/socket/: handler.rs  registry.rs
